# fabric-skills-settings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
.claude/agents/: developer.md  operator.md  tester.md
.github/workflows/: ci.yml
cli/: install-fabric-agent
cli/fabric_agent_installer/: _installer.py
cli/setup/: setup.ps1  setup.sh
docs/: architecture.md  deployment-pipeline.md  harness-engineering-review.md  learn-more.md  mcp-auth-flow.md
fabric_skills_settings/: __init__.py  _installer.py
frontend/: jest.config.ts  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/docker/: Dockerfile
memory/: MEMORY.md
packaging/validators/: validate-agent-guidance.py  validate-install-package.py
profiles/claude/: CLAUDE.md  settings.local.json
profiles/codex/: AGENTS.md
profiles/shared/: .gitignore.fragment
rules/: data-engineering.md
server/: .dockerignore  Dockerfile  __init__.py  __main__.py  app.py  audit.py  docker-compose.yml  script_runner.py
skills/: fabric-ingest.md  fabric-validate.md
templates/: data-quality-checklist.md  incident-report.md  runbook.md
tests/: conftest.py  test_admin_api.py  test_api_key_repository.py  test_fab_sandbox_ps1.py  test_graph_builder.py  test_graph_visualize.py  test_layout.py  test_lint.py  test_local_helper_wrappers.py  test_mcp_wrappers.py  test_mock_data_generator.py  test_profile_entrypoints.py  test_semantic_model_inspect.py  test_server_auth.py  test_skill_split_coverage.py  test_validator_profile_minimal.py
(+86 files in other folders)
