[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fabric-skills-settings"
dynamic = ["version"]
description = "Install Microsoft Fabric agent profiles (Claude Code and Codex) into a target repository."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
install-fabric-agent = "fabric_agent_installer._installer:main"

[dependency-groups]
dev = ["pytest>=8", "Faker>=26", "mimesis>=18", "scikit-learn>=1.5", "pandas>=2", "networkx>=3.2", "rank_bm25>=0.2.2"]

[project.optional-dependencies]
graph = ["networkx>=3.2", "rank_bm25>=0.2.2"]
server = [
    "mcp>=1.0",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "networkx>=3.2",
    "rank_bm25>=0.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["cli/fabric_agent_installer"]

[tool.hatch.build.targets.wheel.sources]
"cli/fabric_agent_installer" = "fabric_agent_installer"

[tool.hatch.build.targets.wheel.force-include]
"cli/profiles" = "fabric_agent_installer/_profiles"
"cli/setup" = "fabric_agent_installer/_setup"
"cli/tools" = "fabric_agent_installer/_tools"

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "server/",
    "packaging/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "setup.ps1",
    "setup.sh",
]

